<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroidKioskModeActivity!</string>
    <string name="app_name">AndroidKioskMode</string>
    <string name="mainActivity">Actividad principal</string>
    <string name="kioskMode">Modo Kiosko</string>
    <string name="backDesabled">Botón retroceso: desactivado</string>
    <string name="secondaryActivity">Actividad secundaria</string>
    <string name="backEnabled">Botón retroceso: activado</string>
    <string name="goToSecondary">Ir a actividad secundaria</string>
    <string name="close">Cerrar aplicación</string>

</resources>