<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainActivity" android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kioskMode" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backDesabled" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/btnClose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/close" android:onClick="closeApp"/>

            <Button
                android:id="@+id/btnGoToSecondary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnClose"
                android:layout_alignParentLeft="true"
                android:text="@string/goToSecondary" android:onClick="goToSecondary"/>

        </RelativeLayout>

</LinearLayout>